--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "@angular/router": "4.4.4",
     "@ngui/map": "0.18.3",
     "@types/googlemaps": "3.26.14",
+    "angular-localstorage": "^1.1.5",
+    "angular-webstorage-service": "^1.0.2",
     "arrive": "2.3.1",
     "bootstrap": "3.3.5",
     "bootstrap-notify": "3.1.3",
+    "chart.js": "^2.7.1",
     "chartist": "0.9.4",
     "core-js": "2.4.1",
     "express": "4.15.3",
